@@ -20,6 +20,7 @@ import static org.tinymediamanager.core.entities.Person.Type.DIRECTOR;
 import static org.tinymediamanager.core.entities.Person.Type.WRITER;
 
 import java.io.IOException;
+import java.io.InterruptedIOException;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -42,6 +43,7 @@ import org.tinymediamanager.scraper.MediaMetadata;
 import org.tinymediamanager.scraper.MediaSearchResult;
 import org.tinymediamanager.scraper.entities.MediaArtwork;
 import org.tinymediamanager.scraper.entities.MediaType;
+import org.tinymediamanager.scraper.exceptions.HttpException;
 import org.tinymediamanager.scraper.exceptions.MissingIdException;
 import org.tinymediamanager.scraper.exceptions.NothingFoundException;
 import org.tinymediamanager.scraper.exceptions.ScrapeException;
@@ -51,6 +53,7 @@ import org.tinymediamanager.scraper.omdb.entities.MediaEntity;
 import org.tinymediamanager.scraper.omdb.entities.MediaRating;
 import org.tinymediamanager.scraper.omdb.entities.MediaSearch;
 import org.tinymediamanager.scraper.omdb.entities.SeasonEntity;
+import org.tinymediamanager.scraper.util.CacheMap;
 import org.tinymediamanager.scraper.util.ListUtils;
 import org.tinymediamanager.scraper.util.MediaIdUtil;
 import org.tinymediamanager.scraper.util.MetadataUtil;
@@ -58,13 +61,8 @@ import org.tinymediamanager.scraper.util.RatingUtil;
 
 public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements ITvShowMetadataProvider {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(OmdbTvShowMetadataProvider.class);
-  private List<MediaMetadata> episodeList = new ArrayList<>();
-
-  @Override
-  public boolean isActive() {
-    return StringUtils.isNotBlank(getApiKey());
-  }
+  private static final Logger                                LOGGER                 = LoggerFactory.getLogger(OmdbTvShowMetadataProvider.class);
+  private static final CacheMap<String, List<MediaMetadata>> EPISODE_LIST_CACHE_MAP = new CacheMap<>(60, 10);
 
   @Override
   protected String getSubId() {
@@ -75,20 +73,20 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
   public MediaMetadata getMetadata(TvShowSearchAndScrapeOptions options) throws ScrapeException, MissingIdException, NothingFoundException {
     LOGGER.debug("getMetadata() - TvShow: {}", options.getSearchQuery());
 
+    initAPI();
+
     MediaMetadata metadata = new MediaMetadata(getId());
-    String apiKey = getApiKey();
     DateFormat format = new SimpleDateFormat("d MMMM yyyy", Locale.ENGLISH);
     MediaEntity result;
 
-    if (StringUtils.isBlank(apiKey)) {
-      LOGGER.warn("no API key found");
-      return metadata;
-    }
-
     String imdbId = getImdbId(options);
 
+    if (StringUtils.isBlank(imdbId)) {
+      throw new MissingIdException(imdbId);
+    }
+
     try {
-      result = controller.getScrapeDataById(apiKey, imdbId, "series", true);
+      result = controller.getScrapeDataById(imdbId, "series", true);
     }
     catch (IOException e) {
       LOGGER.error("error searching: {}", e.getMessage());
@@ -247,7 +245,8 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
           rating.setRating(Integer.parseInt(movieRating.value.replace("%", "")));
           rating.setMaxValue(100);
           metadata.addRating(rating);
-        } catch (Exception ignored) {
+        }
+        catch (Exception ignored) {
         }
       }
     }
@@ -272,9 +271,6 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
       artwork.setDefaultUrl(result.poster);
       metadata.addMediaArt(artwork);
     }
-
-    //Get all Episode Information for given TvShow
-    episodeList = getEpisodeList(options);
 
     return metadata;
   }
@@ -303,7 +299,9 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
 
   @Override
   public MediaMetadata getMetadata(TvShowEpisodeSearchAndScrapeOptions options) throws ScrapeException, MissingIdException, NothingFoundException {
+    LOGGER.debug("getMetadata() - episode: {}", options.getSearchQuery());
 
+    initAPI();
 
     DateFormat format = new SimpleDateFormat("d MMMM yyyy", Locale.ENGLISH);
     String imdbID = "";
@@ -313,9 +311,12 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
     int seasonNr = options.getIdAsIntOrDefault(MediaMetadata.SEASON_NR, -1);
     int episodeNr = options.getIdAsIntOrDefault(MediaMetadata.EPISODE_NR, -1);
 
+    // first get the base episode metadata which can be gathered via getEpisodeList()
+    List<MediaMetadata> episodeList = getEpisodeList(options.createTvShowSearchAndScrapeOptions());
+
     if (episodeList.isEmpty()) {
       LOGGER.error("EpisodeList is empty, cannot fetch Episode Information");
-      return md;
+      throw new NothingFoundException();
     }
 
     for (MediaMetadata metadata : episodeList) {
@@ -325,212 +326,214 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
       }
     }
 
-    if (imdbID.isBlank()) {
-      LOGGER.warn("no imdb id found for season {} episode {}",seasonNr, episodeNr);
+    if (StringUtils.isBlank(imdbID)) {
+      LOGGER.warn("no imdb id found for season {} episode {}", seasonNr, episodeNr);
       return md;
     }
 
-      MediaEntity mediaEntity = null;
+    MediaEntity mediaEntity = null;
+
+    try {
+      mediaEntity = controller.getScrapeDataById(imdbID, "episode", true);
+    }
+    catch (IOException e) {
+      LOGGER.error("error searching: {}", e.getMessage());
+      throw new ScrapeException(e);
+    }
+
+    if (mediaEntity != null) {
+
+      // Add the Information
+      md.setTitle(mediaEntity.title);
+      try {
+        md.setYear(Integer.parseInt(mediaEntity.year));
+      }
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse year: {}", e.getMessage());
+      }
+      md.addCertification(MediaCertification.findCertification(mediaEntity.rated));
+
+      // ReleaseDate
+      try {
+        md.setReleaseDate(format.parse(mediaEntity.released));
+      }
+      catch (Exception ignored) {
+      }
+
+      md.setSeasonNumber(mediaEntity.season);
+      md.setEpisodeNumber(mediaEntity.episode);
+
+      // Runtime
+      Pattern p = Pattern.compile("\\d+");
+      Matcher m = p.matcher(mediaEntity.runtime);
+      while (m.find()) {
+        try {
+          md.setRuntime(Integer.parseInt(m.group()));
+        }
+        catch (NumberFormatException ignored) {
+        }
+      }
+
+      String[] genres = mediaEntity.genre.split(",");
+      for (String genre : genres) {
+        genre = genre.trim();
+        MediaGenres mediaGenres = MediaGenres.getGenre(genre);
+        md.addGenre(mediaGenres);
+      }
+
+      String[] directors = mediaEntity.director.split(",");
+      for (String d : directors) {
+        Person director = new Person(DIRECTOR);
+        director.setName(d.trim());
+        md.addCastMember(director);
+      }
+
+      String[] writers = mediaEntity.writer.split(",");
+      for (String w : writers) {
+        Person writer = new Person(WRITER);
+        writer.setName(w.trim());
+        md.addCastMember(writer);
+      }
+
+      String[] actors = mediaEntity.actors.split(",");
+      for (String a : actors) {
+        Person actor = new Person(ACTOR);
+        actor.setName(a.trim());
+        md.addCastMember(actor);
+      }
+
+      md.setPlot(mediaEntity.plot);
+      md.setSpokenLanguages(getResult(mediaEntity.language, ","));
+      md.setCountries(getResult(mediaEntity.country, ","));
 
       try {
-        mediaEntity = controller.getScrapeDataById(getApiKey(), imdbID, "episode", true);
+        org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("imdb");
+        rating.setRating(Float.parseFloat(mediaEntity.imdbRating));
+        rating.setVotes(MetadataUtil.parseInt(mediaEntity.imdbVotes));
+        rating.setMaxValue(10);
+        md.addRating(rating);
       }
-      catch (IOException e) {
-        e.printStackTrace();
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
+      }
+      try {
+        org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("metascore");
+        rating.setRating(Float.parseFloat(mediaEntity.metascore));
+        rating.setMaxValue(100);
+        md.addRating(rating);
+      }
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
       }
 
-      if (mediaEntity != null) {
+      // Tomatoratings
 
-        // Add the Information
-        md.setTitle(mediaEntity.title);
-        try {
-          md.setYear(Integer.parseInt(mediaEntity.year));
-        }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse year: {}", e.getMessage());
-        }
-        md.addCertification(MediaCertification.findCertification(mediaEntity.rated));
-
-        // ReleaseDate
-        try {
-          md.setReleaseDate(format.parse(mediaEntity.released));
-        }
-        catch (Exception ignored) {
-        }
-
-        md.setSeasonNumber(mediaEntity.season);
-        md.setEpisodeNumber(mediaEntity.episode);
-
-        // Runtime
-        Pattern p = Pattern.compile("\\d+");
-        Matcher m = p.matcher(mediaEntity.runtime);
-        while (m.find()) {
-          try {
-            md.setRuntime(Integer.parseInt(m.group()));
-          }
-          catch (NumberFormatException ignored) {
-          }
-        }
-
-        String[] genres = mediaEntity.genre.split(",");
-        for (String genre : genres) {
-          genre = genre.trim();
-          MediaGenres mediaGenres = MediaGenres.getGenre(genre);
-          md.addGenre(mediaGenres);
-        }
-
-        String[] directors = mediaEntity.director.split(",");
-        for (String d : directors) {
-          Person director = new Person(DIRECTOR);
-          director.setName(d.trim());
-          md.addCastMember(director);
-        }
-
-        String[] writers = mediaEntity.writer.split(",");
-        for (String w : writers) {
-          Person writer = new Person(WRITER);
-          writer.setName(w.trim());
-          md.addCastMember(writer);
-        }
-
-        String[] actors = mediaEntity.actors.split(",");
-        for (String a : actors) {
-          Person actor = new Person(ACTOR);
-          actor.setName(a.trim());
-          md.addCastMember(actor);
-        }
-
-        md.setPlot(mediaEntity.plot);
-        md.setSpokenLanguages(getResult(mediaEntity.language, ","));
-        md.setCountries(getResult(mediaEntity.country, ","));
-
-        try {
-          org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("imdb");
-          rating.setRating(Float.parseFloat(mediaEntity.imdbRating));
-          rating.setVotes(MetadataUtil.parseInt(mediaEntity.imdbVotes));
-          rating.setMaxValue(10);
-          md.addRating(rating);
-        }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
-        }
-        try {
-          org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("metascore");
-          rating.setRating(Float.parseFloat(mediaEntity.metascore));
+      try {
+        if (!mediaEntity.tomatoMeter.contains("N/A")) {
+          org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometerallcritics");
+          rating.setRating(Float.parseFloat(mediaEntity.tomatoMeter));
           rating.setMaxValue(100);
+          rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoReviews));
           md.addRating(rating);
         }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
-        }
+      }
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
+      }
 
-        // Tomatoratings
-
-        try {
-          if (!mediaEntity.tomatoMeter.contains("N/A")) {
-            org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometerallcritics");
-            rating.setRating(Float.parseFloat(mediaEntity.tomatoMeter));
-            rating.setMaxValue(100);
-            rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoReviews));
-            md.addRating(rating);
-          }
-        }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
-        }
-
-        try {
-          if (!mediaEntity.tomatoUserMeter.contains("N/A")) {
-            org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometerallaudience");
-            rating.setRating(Float.parseFloat(mediaEntity.tomatoUserMeter));
-            rating.setMaxValue(100);
-            rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoUserReviews));
-            md.addRating(rating);
-          }
-        }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
-        }
-
-        try {
-          if (!mediaEntity.tomatoRating.contains("N/A")) {
-            org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometeravgcritics");
-            rating.setRating(Float.parseFloat(mediaEntity.tomatoRating));
-            rating.setMaxValue(100);
-            rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoReviews));
-            md.addRating(rating);
-          }
-        }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
-        }
-
-        try {
-          if (!mediaEntity.tomatoUserRating.contains("N/A")) {
-            org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometeravgaudience");
-            rating.setRating(Float.parseFloat(mediaEntity.tomatoUserRating));
-            rating.setMaxValue(100);
-            rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoUserReviews));
-            md.addRating(rating);
-          }
-        }
-        catch (NumberFormatException e) {
-          LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
-        }
-        // use rotten tomates from the Ratings block
-        for (MediaRating movieRating : ListUtils.nullSafe(mediaEntity.ratings)) {
-          if ("Rotten Tomatoes".equals(movieRating.source)) {
-            try {
-              org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("rottenTomatoes");
-              rating.setRating(Integer.parseInt(movieRating.value.replace("%", "")));
-              rating.setMaxValue(100);
-              md.addRating(rating);
-            } catch (Exception ignored) {
-            }
-          }
-        }
-
-        // get the imdb rating from the imdb dataset too (and probably replace an
-        // outdated rating from omdb)
-        if (md.getId(MediaMetadata.IMDB) instanceof String) {
-          org.tinymediamanager.core.entities.MediaRating omdbRating = md.getRatings()
-                  .stream()
-                  .filter(rating -> MediaMetadata.IMDB.equals(rating.getId()))
-                  .findFirst()
-                  .orElse(null);
-          org.tinymediamanager.core.entities.MediaRating imdbRating = RatingUtil.getImdbRating((String) md.getId(MediaMetadata.IMDB));
-          if (imdbRating != null && (omdbRating == null || imdbRating.getVotes() > omdbRating.getVotes())) {
-            md.getRatings().remove(omdbRating);
-            md.addRating(imdbRating);
-          }
-        }
-
-        if (StringUtils.isNotBlank(mediaEntity.poster)) {
-          MediaArtwork artwork = new MediaArtwork(getId(), MediaArtwork.MediaArtworkType.POSTER);
-          artwork.setDefaultUrl(mediaEntity.poster);
-          md.addMediaArt(artwork);
+      try {
+        if (!mediaEntity.tomatoUserMeter.contains("N/A")) {
+          org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometerallaudience");
+          rating.setRating(Float.parseFloat(mediaEntity.tomatoUserMeter));
+          rating.setMaxValue(100);
+          rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoUserReviews));
+          md.addRating(rating);
         }
       }
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
+      }
+
+      try {
+        if (!mediaEntity.tomatoRating.contains("N/A")) {
+          org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometeravgcritics");
+          rating.setRating(Float.parseFloat(mediaEntity.tomatoRating));
+          rating.setMaxValue(100);
+          rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoReviews));
+          md.addRating(rating);
+        }
+      }
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
+      }
+
+      try {
+        if (!mediaEntity.tomatoUserRating.contains("N/A")) {
+          org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("tomatometeravgaudience");
+          rating.setRating(Float.parseFloat(mediaEntity.tomatoUserRating));
+          rating.setMaxValue(100);
+          rating.setVotes(MetadataUtil.parseInt(mediaEntity.tomatoUserReviews));
+          md.addRating(rating);
+        }
+      }
+      catch (NumberFormatException e) {
+        LOGGER.trace("could not parse rating/vote count: {}", e.getMessage());
+      }
+      // use rotten tomates from the Ratings block
+      for (MediaRating movieRating : ListUtils.nullSafe(mediaEntity.ratings)) {
+        if ("Rotten Tomatoes".equals(movieRating.source)) {
+          try {
+            org.tinymediamanager.core.entities.MediaRating rating = new org.tinymediamanager.core.entities.MediaRating("rottenTomatoes");
+            rating.setRating(Integer.parseInt(movieRating.value.replace("%", "")));
+            rating.setMaxValue(100);
+            md.addRating(rating);
+          }
+          catch (Exception ignored) {
+          }
+        }
+      }
+
+      // get the imdb rating from the imdb dataset too (and probably replace an
+      // outdated rating from omdb)
+      if (md.getId(MediaMetadata.IMDB) instanceof String) {
+        org.tinymediamanager.core.entities.MediaRating omdbRating = md.getRatings()
+            .stream()
+            .filter(rating -> MediaMetadata.IMDB.equals(rating.getId()))
+            .findFirst()
+            .orElse(null);
+        org.tinymediamanager.core.entities.MediaRating imdbRating = RatingUtil.getImdbRating((String) md.getId(MediaMetadata.IMDB));
+        if (imdbRating != null && (omdbRating == null || imdbRating.getVotes() > omdbRating.getVotes())) {
+          md.getRatings().remove(omdbRating);
+          md.addRating(imdbRating);
+        }
+      }
+
+      if (StringUtils.isNotBlank(mediaEntity.poster)) {
+        MediaArtwork artwork = new MediaArtwork(getId(), MediaArtwork.MediaArtworkType.POSTER);
+        artwork.setDefaultUrl(mediaEntity.poster);
+        md.addMediaArt(artwork);
+      }
+    }
     return md;
   }
 
   @Override
   public SortedSet<MediaSearchResult> search(TvShowSearchAndScrapeOptions options) throws ScrapeException {
     LOGGER.debug("search(): {}", options.getSearchQuery());
+
+    initAPI();
+
     SortedSet<MediaSearchResult> mediaResult = new TreeSet<>();
 
-    String apiKey = getApiKey();
-
-    if (StringUtils.isBlank(apiKey)) {
-      LOGGER.warn("no API key found");
-      return mediaResult;
-    }
-
-    MediaSearch resultList;
+    MediaSearch resultList = null;
     try {
-      resultList = controller.getMovieSearchInfo(apiKey, options.getSearchQuery(), "series", null);
+      resultList = controller.getMovieSearchInfo(options.getSearchQuery(), "series", null);
     }
-    catch (Exception e) {
+    catch (InterruptedIOException e) {
+      // do not swallow these Exceptions
+      Thread.currentThread().interrupt();
+    }
+    catch (IOException e) {
       LOGGER.error("error searching: {}", e.getMessage());
       throw new ScrapeException(e);
     }
@@ -571,19 +574,38 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
 
   @Override
   public List<MediaMetadata> getEpisodeList(TvShowSearchAndScrapeOptions options) throws ScrapeException, MissingIdException {
+    LOGGER.debug("getEpisodeList(): {}", options.getSearchQuery());
+
+    initAPI();
 
     String imdbId = getImdbId(options);
-    List<MediaMetadata> mediaMetadataList = new ArrayList<>();
-    MediaEntity tvShowResult;
-    SeasonEntity seasonEntity;
 
-    if (StringUtils.isBlank(getApiKey())) {
-      LOGGER.warn("no API key found");
+    if (StringUtils.isBlank(imdbId)) {
+      throw new MissingIdException("imdbId");
+    }
+
+    // look in the cache map if there is an entry
+    List<MediaMetadata> mediaMetadataList = EPISODE_LIST_CACHE_MAP.get(imdbId + "_" + options.getLanguage().getLanguage());
+
+    if (ListUtils.isNotEmpty(mediaMetadataList)) {
+      // cache hit!
       return mediaMetadataList;
     }
 
+    mediaMetadataList = new ArrayList<>();
+
+    if (StringUtils.isBlank(getApiKey())) {
+      LOGGER.warn("no API Key found");
+      throw new ScrapeException(new HttpException(401, "Unauthorized"));
+    }
+
+    MediaEntity tvShowResult = null;
     try {
-      tvShowResult = controller.getScrapeDataById(getApiKey(), imdbId, "series", true);
+      tvShowResult = controller.getScrapeDataById(imdbId, "series", true);
+    }
+    catch (InterruptedIOException e) {
+      // do not swallow these Exceptions
+      Thread.currentThread().interrupt();
     }
     catch (IOException e) {
       LOGGER.error("error searching: {}", e.getMessage());
@@ -596,33 +618,44 @@ public class OmdbTvShowMetadataProvider extends OmdbMetadataProvider implements 
     }
 
     // First get the total amount of seasons
-    if ( tvShowResult.totalSeasons.equals("N/A")) {
+    if (tvShowResult.totalSeasons.equals("N/A")) {
       LOGGER.error("cannot parse total amount of seasons");
       return mediaMetadataList;
     }
     int seasons = Integer.parseInt(tvShowResult.totalSeasons);
 
-
     // Then get Information for every Season and save it in metadata result
     for (int i = 1; i < seasons + 1; i++) {
 
+      SeasonEntity seasonEntity;
       try {
-        seasonEntity = controller.getSeasonById(getApiKey(), imdbId, "series", i);
+        seasonEntity = controller.getSeasonById(imdbId, "series", i);
       }
       catch (IOException e) {
-        LOGGER.error("error scraping season information: {}", e.getMessage());
-        throw new ScrapeException(e);
+        LOGGER.error("error scraping season {} information: {}", i, e.getMessage());
+        continue;
       }
 
-      for( EpisodeEntity ep : seasonEntity.episodes ) {
+      if (seasonEntity.episodes == null) {
+        LOGGER.error("No Episode Information for Season: {}", i);
+        continue;
+      }
+
+      for (EpisodeEntity ep : seasonEntity.episodes) {
         MediaMetadata md = new MediaMetadata(getId());
 
         md.setSeasonNumber(i);
         md.setEpisodeNumber(Integer.parseInt(ep.episode));
-        md.setId("imdbId",ep.imdbID);
+        md.setId("imdbId", ep.imdbID);
         mediaMetadataList.add(md);
       }
     }
+
+    // cache for further fast access
+    if (!mediaMetadataList.isEmpty()) {
+      EPISODE_LIST_CACHE_MAP.put(imdbId + "_" + options.getLanguage().getLanguage(), mediaMetadataList);
+    }
+
     return mediaMetadataList;
   }
 }
